z-index bugfix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,6 @@ iframe {
 	text-align: center;
 	min-height: 100%;
 	margin-bottom: 100px;
-	z-index: -10;
 }
 .navbar .social {
 	margin-top: 14px;
